--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ dependencies:
   fluttertoast: ^8.2.1
   get: ^4.6.5
   url_launcher: ^6.1.10
-  http: ^0.13.5
+  dio: ^5.1.1
   flutter_rating_bar: ^4.0.1
   file_picker: ^5.2.6
   google_maps_flutter: ^2.2.5
